# MIHAI_KOLTAI

./: .gitignore  README.md  exporter_config_v3.json  main.py  pack_files.py  pix.py  pyproject.toml
ai_context_export/: code.txt
assets/stories/: phrases.json
assets/video/zasora/: boicovik.webm  chey.webm  clich.webm  dance.webm  fnaf.webm  hachslayers.webm  pigs.webm  poh1.webm  poh2.webm  poh3.webm  race.webm  roosterhlow.webm  stal.webm  turtle.webm
src/components/: __init__.py
src/components/phone/: __init__.py  home.py  layout.py  phone.py  zasora.py
src/components/phone/calc/: __init__.py  app.py
src/components/phone/zasora/: __init__.py  app.py  commentPanel.py  header.py
src/composables/: __init__.py
src/composables/zasora/: __init__.py  dataLoader.py  videoLoader.py
src/core/: __init__.py  asset_manager.py
src/minigames/zasora/: __init__.py  game.py
src/shared/: __init__.py  constants.py  types.py  utils.py
src/states/: __init__.py  calc.py  phone.py  zasora.py
src/ui/: __init__.py  input.py  shapes.py  text.py
src/ui/phone/: __init__.py  icons.py
tools/: __init__.py  atlas_config.json  atlas_gen.py
