[project]
name = "zhosko"
version = "0.1.0"
description = "Game project built with Arcade and UV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arcade>=3.3.3",
    "numpy>=2.4.2",
    "orjson>=3.11.7",
    "pytexturepacker>=1.2.1",
]

[project.scripts]
atlas-gen = "tools.atlas_gen:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "tools"]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
